infra/qsb/k8s/apps/media/plex/plex-meta-manager/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: plex-meta-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: plex-meta-manager
  egress:
    # plex
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plex
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP

    # radarr
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
            io.kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP

    # sonarr
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sonarr
            io.kubernetes.pod.namespace: downloads
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
